src/expr/src/scalar/snapshots/mz_expr__scalar__func__add_date_interval.snap
---
source: src/expr/src/scalar/func.rs
expression: "#[sqlfunc(is_monotone = \"(true, true)\", is_infix_op = true, sqlname = \"+\")]\nfn add_date_interval<'a>(\n    date: Date,\n    interval: Interval,\n) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {\n    let dt = NaiveDate::from(date).and_hms_opt(0, 0, 0).unwrap();\n    let dt = add_timestamp_months(&dt, interval.months)?;\n    let dt = dt\n        .checked_add_signed(interval.duration_as_chrono())\n        .ok_or(EvalError::TimestampOutOfRange)?;\n    Ok(CheckedTimestamp::from_timestamplike(dt)?)\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct AddDateInterval;
impl<'a> crate::func::binary::EagerBinaryFunc<'a> for AddDateInterval {
    type Input1 = Date;
    type Input2 = Interval;
    type Output = Result<CheckedTimestamp<NaiveDateTime>, EvalError>;
    fn call(
        &self,
        a: Self::Input1,
        b: Self::Input2,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output {
        add_date_interval(a, b)
    }
    fn output_type(
        &self,
        input_type_a: mz_repr::SqlColumnType,
        input_type_b: mz_repr::SqlColumnType,
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        output
            .nullable(
                nullable
                    || (propagates_nulls
                        && (input_type_a.nullable || input_type_b.nullable)),
            )
    }
    fn is_infix_op(&self) -> bool {
        true
    }
    fn is_monotone(&self) -> (bool, bool) {
        (true, true)
    }
}
impl std::fmt::Display for AddDateInterval {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("+")
    }
}
impl AddDateInterval {
    pub const fn func_doc() -> crate::func::FuncDoc {
        crate::func::FuncDoc {
            unique_name: stringify!(add_date_interval),
            category: "Uncategorized",
            signature: "date + interval -> timestamp",
            description: "",
            ..crate::func::FuncDoc::default()
        }
    }
}
fn add_date_interval<'a>(
    date: Date,
    interval: Interval,
) -> Result<CheckedTimestamp<NaiveDateTime>, EvalError> {
    let dt = NaiveDate::from(date).and_hms_opt(0, 0, 0).unwrap();
    let dt = add_timestamp_months(&dt, interval.months)?;
    let dt = dt
        .checked_add_signed(interval.duration_as_chrono())
        .ok_or(EvalError::TimestampOutOfRange)?;
    Ok(CheckedTimestamp::from_timestamplike(dt)?)
}
